[project]
name = "kaio-ken-defender"
version = "0.1.0"
description = ""
authors = [
    {name = "lucaslima18",email = "lucas.ala1999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pyfiglet (>=1.0.4,<2.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
mypy_path = "src"
namespace_packages = true

[[tool.mypy.overrides]]
module = "coloredlogs.*"
ignore_missing_imports = true
